fix: tooltip align object

--- a/meteor/client/ui/SegmentList/SegmentList.scss
+++ b/meteor/client/ui/SegmentList/SegmentList.scss
@@ -113,12 +113,12 @@ $duration-area-margin: 0.5em;
 
 			.segment-opl__part-timing-group-marker {
 				width: 15px;
-				height: 15px;
+				height: 14px;
 				border-left: 1px solid rgba(255, 255, 255, 0.5);
 				border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 				border-radius: 0 0 0 8px;
 				margin-left: 25px;
-				margin-top: -7px;
+				margin-top: -6px;
 			}
 
 			> .segment-opl__part-header {
